--- a/env/cluster-addons/monitoring/opentelemetry/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/monitoring/opentelemetry/resources/opentelemetry-collector.yaml
@@ -20,6 +20,15 @@ spec:
       mountPath: /var/log
 
   config: |
+    extensions:
+      memory_ballast:
+        size_in_percentage: 20
+      health_check:
+        # check_collector_pipeline:
+        #   enabled: true
+        #   interval: "5m"
+        #   exporter_failure_threshold: 5
+      
     receivers:
       otlp:
         protocols:
