--- a/env/cluster-addons/system-addons/dapr/kustomization.yaml
+++ b/env/cluster-addons/system-addons/dapr/kustomization.yaml
@@ -10,4 +10,4 @@ helmCharts:
     releaseName: dapr
     valuesFile: values.yaml
     includeCRDs: true
-    namespace: tools
+    namespace: system-addons
