--- a/env/cluster-addons/system-addons/dapr/resources/podmonitor.yaml
+++ b/env/cluster-addons/system-addons/dapr/resources/podmonitor.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   namespaceSelector:
     matchNames:
-      - "tools"
+      - "system-addons"
   podMetricsEndpoints:
     - port: metrics
   selector:
