--- a/env/cluster-addons/system-addons/ingress-nginx/kustomization.yaml
+++ b/env/cluster-addons/system-addons/ingress-nginx/kustomization.yaml
@@ -5,5 +5,5 @@ helmCharts:
     name: ingress-nginx
     version: 4.1.0
     releaseName: nginx-ingress
-    namespace: tools
+    namespace: system-addons
     valuesFile: values.yaml
