--- a/argocd/apps/cluster-addons/cluster-addons-flagger-appset.yaml
+++ b/argocd/apps/cluster-addons/cluster-addons-flagger-appset.yaml
@@ -1,4 +1,4 @@
-# Kynervo is not part of the tools-appset due to special addition of ignoreDifferences 
+# Kynervo is not part of the system-addons-appset due to special addition of ignoreDifferences 
 # for autogen rules from kynervo policies
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
