--- a/env/cluster-addons/others/kynervo/kustomization.yaml
+++ b/env/cluster-addons/others/kynervo/kustomization.yaml
@@ -5,13 +5,13 @@ helmCharts:
   - repo: https://kyverno.github.io/kyverno/
     name: kyverno
     version: v2.3.3 
-    namespace: tools
+    namespace: system-addons
     releaseName: kyverno
     valuesFile: kyverno-values.yaml
     
   - repo: https://kyverno.github.io/kyverno/
     name: kyverno-policies
     version: v2.3.3
-    namespace: tools
+    namespace: system-addons
     releaseName: kyverno-policies
     valuesFile: kyverno-policies-values.yaml
