--- a/env/cluster-addons/system-addons/external-secrets/resources/cluster-secret-store.yaml
+++ b/env/cluster-addons/system-addons/external-secrets/resources/cluster-secret-store.yaml
@@ -14,8 +14,8 @@ spec:
           accessKeyIDSecretRef:
             name: awssm-secret
             key: AWS_ACCESS_KEY_ID
-            namespace: tools
+            namespace: system-addons
           secretAccessKeySecretRef:
             name: awssm-secret
             key: AWS_SECRET_ACCESS_KEY
-            namespace: tools
+            namespace: system-addons
