--- a/argocd/repositories/git_sample_argocd_app.yaml
+++ b/argocd/repositories/git_sample_argocd_app.yaml
@@ -6,6 +6,6 @@ metadata:
   labels:
     argocd.argoproj.io/secret-type: repository
 stringData:
-  url: https://github.com/logamanig/sample-argocd-apps
+  url: https://github.com/logamanig/sample-argocd-apps.git
   name: sample-argocd-app
   type: git
