refactor github url

--- a/argocd/apps/cluster-addons/cluster-addons-flagger-appset.yaml
+++ b/argocd/apps/cluster-addons/cluster-addons-flagger-appset.yaml
@@ -26,7 +26,7 @@ spec:
     spec:
       project: cluster-addons
       source:
-        repoURL: https://github.com/logamanig/sample-argocd-apps.git
+        repoURL: https://github.com/logamanig/sample-argocd-apps
         targetRevision: master
         path: "env/cluster-addons/others/flagger"
       destination:
