--- a/argocd/apps/cluster-addons/cluster-addons-system-addons-appset.yaml
+++ b/argocd/apps/cluster-addons/cluster-addons-system-addons-appset.yaml
@@ -10,7 +10,7 @@ spec:
     - matrix:
         generators:
           - git:
-              repoURL: https://github.com/logamanig/sample-argocd-apps.git
+              repoURL: https://github.com/logamanig/sample-argocd-apps
               revision: master
               directories:
                 - path: env/cluster-addons/system-addons/*
@@ -39,7 +39,7 @@ spec:
     spec:
       project: cluster-addons
       source:
-        repoURL: https://github.com/logamanig/sample-argocd-apps.git
+        repoURL: https://github.com/logamanig/sample-argocd-apps
         targetRevision: master
         path: '{{path}}'
       destination:
