--- a/argocd/apps/cluster-addons/cluster-addons-system-addons-dedicated-ns-appset.yaml
+++ b/argocd/apps/cluster-addons/cluster-addons-system-addons-dedicated-ns-appset.yaml
@@ -10,7 +10,7 @@
 #     - matrix:
 #         generators:
 #           - git:
-#               repoURL: https://github.com/logamanig/sample-argocd-apps.git
+#               repoURL: https://github.com/logamanig/sample-argocd-apps
 #               revision: master
 #               directories:
 #                 - path: env/cluster-addons/dedicated-ns/*
@@ -30,7 +30,7 @@
 #     spec:
 #       project: cluster-addons
 #       source:
-#         repoURL: https://github.com/logamanig/sample-argocd-apps.git
+#         repoURL: https://github.com/logamanig/sample-argocd-apps
 #         targetRevision: master
 #         path: '{{path}}'
 #       destination:
