--- a/argocd/apps/devops/devops-system-addons-appset.yaml
+++ b/argocd/apps/devops/devops-system-addons-appset.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   generators:
     - git:
-        repoURL: https://github.com/logamanig/sample-argocd-apps.git
+        repoURL: https://github.com/logamanig/sample-argocd-apps
         revision: master
         directories:
           - path: env/devops/system-addons/*
@@ -27,7 +27,7 @@ spec:
     spec:
       project: devops
       source:
-        repoURL: https://github.com/logamanig/sample-argocd-apps.git
+        repoURL: https://github.com/logamanig/sample-argocd-apps
         targetRevision: master
         path: '{{path}}'
       destination:
