--- a/env/devops/argocd/values.yaml
+++ b/env/devops/argocd/values.yaml
@@ -511,9 +511,9 @@ configs:
 
   clusterCredentials: []
 
-  repositories:
-    sample-argocd-apps:
-      name: sample-argocd-apps
-      url: https://github.com/logamanig/sample-argocd-apps.git
-      # username: <to be set in k8s secrets directly or merge using external secret>
-      # password: <to be set in k8s secrets directly or merge using external secret>
+  # repositories:
+  #   sample-argocd-apps:
+  #     name: sample-argocd-apps
+  #     url: https://github.com/logamanig/sample-argocd-apps.git
+  #     # username: <to be set in k8s secrets directly or merge using external secret>
+  #     # password: <to be set in k8s secrets directly or merge using external secret>
