--- a/env/cluster-addons/monitoring/tempo/values.yaml
+++ b/env/cluster-addons/monitoring/tempo/values.yaml
@@ -9,25 +9,55 @@ search:
 rbac:
   create: true
 
-# tempo:
-#   securityContext:
-#     capabilities:
-#       drop:
-#         - ALL
-#     readOnlyRootFilesystem: true
-#     runAsNonRoot: true
-#     runAsUser: 1000
+tempo:
+  securityContext:
+    capabilities:
+      drop:
+        - ALL
+    readOnlyRootFilesystem: true
+    runAsNonRoot: true
+    runAsUser: 1000
 
-# ingester:
-#   resources:
-#     limits:
-#       cpu: 0.5
-#       memory: 0.75Gi
-#     requests:
-#       cpu: 0.5
-#       memory: 0.75Gi
+ingester:
+  # resources:
+  #   limits:
+  #     cpu: 0.5
+  #     memory: 0.75Gi
+  #   requests:
+  #     cpu: 0.5
+  #     memory: 0.75Gi
+  autoscaling:
+    enabled: false
+    minReplicas: 1
+    maxReplicas: 3
+    targetCPUUtilizationPercentage: 75
+    targetMemoryUtilizationPercentage: 75
+  # persistence:
+  #   # -- Enable creating PVCs which is required when using boltdb-shipper
+  #   enabled: false
+  #   # -- Size of persistent disk
+  #   size: 10Gi
+  #   # -- Storage class to be used.
+  #   # If defined, storageClassName: <storageClass>.
+  #   # If set to "-", storageClassName: "", which disables dynamic provisioning.
+  #   # If empty or set to null, no storageClassName spec is
+  #   # set, choosing the default provisioner (gp2 on AWS, standard on GKE, AWS, and OpenStack).
+  #   storageClass: null
+  # config:
+  #   # -- Maximum size of a block before cutting it
+  #   max_block_bytes: null
+  #   # -- Maximum length of time before cutting a block
+  #   max_block_duration: null
+  #   # -- Duration to keep blocks in the ingester after they have been flushed
+  #   complete_block_timeout: null
 
-# distributor:
+distributor:
+  autoscaling:
+    enabled: false
+    minReplicas: 1
+    maxReplicas: 3
+    targetCPUUtilizationPercentage: 75
+    targetMemoryUtilizationPercentage: 75
 #   resources:
 #     limits:
 #       cpu: 0.25
@@ -54,7 +84,13 @@ rbac:
 #       cpu: 0.5
 #       memory: 0.75Gi
 
-# queryFrontend:
+queryFrontend:
+  autoscaling:
+    enabled: false
+    minReplicas: 1
+    maxReplicas: 3
+    targetCPUUtilizationPercentage: 75
+    targetMemoryUtilizationPercentage: 75
 #   resources:
 #     llimits:
 #       cpu: 0.25
@@ -97,23 +133,23 @@ gateway:
 
 traces:
   jaeger:
-    # -- Enable Tempo to ingest Jaeger GRPC traces
-    grpc: false
-    # -- Enable Tempo to ingest Jaeger Thrift Binary traces
-    thriftBinary: false
-    # -- Enable Tempo to ingest Jaeger Thrift Compact traces
-    thriftCompact: false
-    # -- Enable Tempo to ingest Jaeger Thrift HTTP traces
-    thriftHttp: false
-  # -- Enable Tempo to ingest Zipkin traces
-  zipkin: false
+    grpc: 
+      enabled: false
+    thriftBinary: 
+      enabled: false
+    thriftCompact: 
+      enabled: false
+    thriftHttp: 
+      enabled: false
+  zipkin: 
+      enabled: false
   otlp:
-    # -- Enable Tempo to ingest Open Telemetry HTTP traces
-    http: true
-    # -- Enable Tempo to ingest Open Telemetry GRPC traces
-    grpc: true
-  # -- Enable Tempo to ingest Open Census traces
-  opencensus: false
+    http: 
+      enabled: false
+    grpc: 
+      enabled: true
+  opencensus: 
+      enabled: false
   # -- Enable Tempo to ingest traces from Kafka. Reference: https://github.com/open-telemetry/opentelemetry-collector-contrib/tree/main/receiver/kafkareceiver
   kafka: {}
 
