--- a/env/cluster-addons/monitoring/tempo/values.yaml
+++ b/env/cluster-addons/monitoring/tempo/values.yaml
@@ -14,8 +14,9 @@ tempo:
     capabilities:
       drop:
         - ALL
-    # readOnlyRootFilesystem: true
-    runAsNonRoot: true
+    # Compactor, querier and query-frontend services require root file system with write access 
+    readOnlyRootFilesystem: false
+    runAsNonRoot: false
     runAsUser: 1000
 
 ingester:
