add port to otel to tempo grpc endpoint

--- a/env/cluster-addons/monitoring/opentelemetry/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/monitoring/opentelemetry/resources/opentelemetry-collector.yaml
@@ -142,7 +142,7 @@ spec:
           insecure: true
 
       otlp/tempo:
-        endpoint: tempo-tempo-distributed-distributor
+        endpoint: tempo-tempo-distributed-distributor:4317
         tls:
           # insecure_skip_verify: true # for HTTPS with invalid cert
           insecure: true # for http only endpoint
