fix otel config for tempo

--- a/env/cluster-addons/monitoring/opentelemetry/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/monitoring/opentelemetry/resources/opentelemetry-collector.yaml
@@ -177,7 +177,7 @@ spec:
         traces:
           receivers: [otlp, opencensus, jaeger]
           processors: [spanmetrics, batch]
-          exporters: [otlphttp/tempo, jaeger]
+          exporters: [otlp/tempo, jaeger]
 
         metrics:
           receivers: [prometheus]
