--- a/env/cluster-addons/monitoring/tempo/values.yaml
+++ b/env/cluster-addons/monitoring/tempo/values.yaml
@@ -153,27 +153,18 @@ traces:
   # -- Enable Tempo to ingest traces from Kafka. Reference: https://github.com/open-telemetry/opentelemetry-collector-contrib/tree/main/receiver/kafkareceiver
   kafka: {}
 
-# ServiceMonitor configuration
 serviceMonitor:
-  # -- If enabled, ServiceMonitor resources for Prometheus Operator are created
   enabled: true
-  # annotations: {}
   labels:
     # required for prometheus-operator
     release: prometheus-operator
 
-# Rules for the Prometheus Operator
 prometheusRule:
-  # -- If enabled, a PrometheusRule resource for Prometheus Operator is created
   enabled: true
-  # -- Alternative namespace for the PrometheusRule resource
   namespace: null
-  # -- PrometheusRule annotations
   annotations: {}
-  # -- Additional PrometheusRule labels
   labels: {}
-  # -- Contents of Prometheus rules file
-  groups: # []
+  groups:
     - name: tempo-rules
       rules:
         - record: job:tempo_request_duration_seconds_bucket:sum_rate
