--- a/env/cluster-addons/monitoring/jaeger/values.yaml
+++ b/env/cluster-addons/monitoring/jaeger/values.yaml
@@ -1,15 +1,15 @@
-# image:
-#   tag: 1.31.0
+image:
+  tag: # commented out to use chart appVersion as Jaeger Operator image version
 
 jaeger:
   create: true
   spec:
     # strategy: production
     allInOne:
-      image: jaegertracing/all-in-one:1.33.0
-      # options:
-      #   prometheus:
-      #     server-url: http://prometheus-operator-kube-p-prometheus:9090
+      image: jaegertracing/all-in-one:1.35.1
+      options:
+        prometheus:
+          server-url: http://prometheus-operator-kube-p-prometheus:9090
       metricsStorage:
         type: prometheus
 
