patch jager crd

--- a/env/cluster-addons/monitoring/jaeger/kustomization.yaml
+++ b/env/cluster-addons/monitoring/jaeger/kustomization.yaml
@@ -1,5 +1,8 @@
 kind: Kustomization
 
+patchesStrategicMerge:
+  - "./overlays/jaeger-crd.yaml"
+
 helmCharts:
   - repo: https://jaegertracing.github.io/helm-charts
     name: jaeger-operator
