--- a/env/cluster-addons/monitoring/jaeger/kustomization.yaml
+++ b/env/cluster-addons/monitoring/jaeger/kustomization.yaml
@@ -1,12 +1,15 @@
 kind: Kustomization
 
+resources:
+  - "./resources/leader-election-role.yaml"
+  
 patchesStrategicMerge:
   - "./overlays/jaeger-crd.yaml"
 
 helmCharts:
   - repo: https://jaegertracing.github.io/helm-charts
     name: jaeger-operator
-    version: 2.29.0
+    version: 2.32.1
     includeCRDs: true
     namespace: monitoring
     releaseName: jaeger-operator
